# video-clipper

./: .gitignore  README.md  example.env  pyproject.toml
video-dataset-tools/: main.py
video_clipper/: video_clipper.py
